# amazon_tlevel_project_2026

./: .gitignore  CLAUDE.md  README.md  TODO.txt  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  album.py  content.py  library.py  progress.py  t_level.py  topic.py  user.py
backend/app/routers/: albums.py  auth.py  content.py  feed.py  library.py  snippets.py  topics.py  users.py
backend/app/schemas/: album.py  chat.py  content.py  feed.py  gamification.py  library.py  topic.py  user.py
backend/app/services/: album_service.py  auth_service.py  chat_service.py  content_service.py  embedding_service.py  feed_service.py  gamification_service.py  library_service.py  snippet_service.py  topic_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0893638fd517_initial_schema.py  54474d1c36aa_add_album_side_side_content_album_.py  7a1f3c9d4e21_add_avatar_s3_key_to_users.py  (+4 more)
backend/tests/: conftest.py  test_album_service.py  test_albums_router.py  test_auth.py  test_auth_router.py  test_auth_service.py  test_chat_models.py  test_chat_service.py  test_content.py  test_content_service.py  test_dependencies_auth.py  test_embedding_service.py  test_gamification_service.py  test_library_router.py  test_library_service.py  test_models.py  test_schemas.py  test_snippet_service.py  test_topic_service.py  test_user_service.py  test_users_router.py
(+201 files in other folders)
